Fixed page height dependent on mobile or not

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,9 +16,7 @@ html {
   flex-direction: column;
   padding: 1rem;
   gap: 0.5rem;
-
-  height: calc(100vh - 150px);
-
+  height: 100vh;
   overflow: auto;
 }
 
@@ -87,5 +85,8 @@ html {
   .stats-container > * {
     width: calc(33% - 1rem);
     min-width: 120px;
+  }
+  .page-content {
+    height: calc(100vh - 150px);
   }
 }
